--- a/trunk/INSTALL.txt
+++ b/trunk/INSTALL.txt
@@ -1,4 +1,4 @@
-Supported Delphi version: Delphi 7, 2006 - XE2
+Supported Delphi version: Delphi 7, Delphi 2006 - XE, RAD Studio XE2
 Supported Windows Versions: XP, 2003, Vista, 2008, 7, 2008R2
 
 
@@ -14,39 +14,39 @@ Delphi 7 Installation
 
 
 Delphi 2007 Installation
-~~~~~~~~~~~~~~~~~~~~~
-1. Open the project group "Packages\Delphi XE\Delphi 2007.groupproj"
+~~~~~~~~~~~~~~~~~~~~~~~~
+1. Open the project group "Packages\Delphi 2007\Delphi 2007.groupproj"
 2. Right click on "VirtualTreesD.bpl" and click "Install"
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 
 
 Delphi 2009 Installation
-~~~~~~~~~~~~~~~~~~~~~
-1. Open the project group "Packages\Delphi XE\Delphi 2009.groupproj"
+~~~~~~~~~~~~~~~~~~~~~~~~
+1. Open the project group "Packages\Delphi 2009\Delphi 2009.groupproj"
 2. Right click on "VirtualTreesD12.bpl" and click "Install"
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 
 
 Delphi 2010 Installation
-~~~~~~~~~~~~~~~~~~~~~
-1. Open the project group "Packages\Delphi XE\Delphi 2010.groupproj"
+~~~~~~~~~~~~~~~~~~~~~~~~
+1. Open the project group "Packages\Delphi 2010\Delphi 2010.groupproj"
 2. Right click on "VirtualTreesD14.bpl" and click "Install"
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 
 
 Delphi XE Installation
-~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~
 1. Open the project group "Packages\Delphi XE\Delphi XE.groupproj"
 2. Right click on "VirtualTreesD15.bpl" and click "Install"
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
    Browse to the "Source" folder of VirtualTreeView, press "OK", "Add", "OK", "OK"
 
 
-Delphi XE2 / C++ Builder XE2 Installation
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Delphi XE2 / RAD Studio XE2 Installation
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 1. Open the project group "Packages\RAD Studio XE2\RAD Studio XE2.groupproj"
 2. Right click on "VirtualTreesD16.bpl" and click "Install"
 3. Go to "Tools > Options > Environment Options > Delphi Options > Library > Library Path > [...]"
