--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -1,3 +1,4 @@
+V5.0.1 (06 Sep 2012):
  - Added Support for RAD Studio XE3
  - Fixed definition of event OnAfterHeaderExport, it used the same member variable as OnBeforeHeaderExport.
  - Fixed problem with Delphi 2007 package
@@ -6,6 +7,8 @@
  - Fixed #274: Wrong stop condition in TBaseVirtualTree.GetLastVisible
  - Fixed runtime package of Delphi 7
  - Fixed issue #273: Incremental search for international symbols not working in Delphi 2009-XE2
+ - A few minor bug fixes have been incorporated
+
 July 03, 2012
  - Release of V5.0.0 final
 June 11-30, 2012
