Added fix for ugly drawn disabled images (thx to S. Glienke). See also: http://stackoverflow.com/questions/6003018/make-disabled-menu-and-toolbar-images-look-better http://qc.embarcadero.com/wc/qcmain.aspx?d=86879

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+ - Added fix for ugly drawn disabled images (thx to S. Glienke). See also: 
+   http://stackoverflow.com/questions/6003018/make-disabled-menu-and-toolbar-images-look-better
+   http://qc.embarcadero.com/wc/qcmain.aspx?d=86879
  - Fixed issue #299: Draw themed focus rectangle with toUseExplorerTheme
  - Fixed issue #198: Wrong check images
  - Removed file VTConfig.inc. The former $ifdef ReverseFullExpandHotKey is now a flag in the 
