--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+V5.1.1 (07 Feb 2012):
  - Fixed issue #313: Translucent selection rectangle completely broken when PaintBackground is used
  - Fixed issue #314: Only if toAutoSort is True non-expanded nodes will be excluded from sorting. 
    This restores the behavior of V5.0.X. 
