--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -1,4 +1,5 @@
 V5.1.3: (17 Apr 2013)
+- Fixed #340: GetHitTestInfoAt on right border of fixed column.
 - Fixed #337: Cannot "grab" item for dragging, odd behaviour of multi selecting with the selection
   rectangle when toFullRowSelect is True but toSimpleDrawSelection is False.  (thx to Stefan Glienke)
 - Fixed #341: Error when unloading DLL due to missing UnRegisterStyleHook
